media query edits

--- a/counter.css
+++ b/counter.css
@@ -33,8 +33,8 @@ body {
   justify-content: center;
   align-items: center;
   padding-top: -4rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
   padding-bottom: 10rem;
   margin-top: 12rem;
   border-radius: 20px;
@@ -182,6 +182,12 @@ h1 {
 
 /* Media Query */
 @media screen and (max-width: 768px) {
+  h1 {
+    transform: scale(0.7);
+  }
+  h4 {
+    transform: scale(0.8);
+  }
   .counter-amount {
     margin-left: 1.75rem;
   }
